; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_dump_pktfile.c_reverse_byte_order.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_dump_pktfile.c_reverse_byte_order.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @reverse_byte_order to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @reverse_byte_order(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = shl i64 %3, 24
  %5 = load i64, i64* %2, align 8
  %6 = and i64 %5, 65280
  %7 = shl i64 %6, 8
  %8 = or i64 %4, %7
  %9 = load i64, i64* %2, align 8
  %10 = lshr i64 %9, 8
  %11 = and i64 %10, 65280
  %12 = or i64 %8, %11
  %13 = load i64, i64* %2, align 8
  %14 = lshr i64 %13, 24
  %15 = or i64 %12, %14
  ret i64 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
